--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <link rel= "stylesheet" href="styles.css">
   </head>
   <body>
